# Awesome_ecommerce

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: action_formatters.yml  main.yaml
fixtures/: category_fixture.json  order_fixture.json  order_product_fixture.json  product_fixture.json  user_fixture.json  user_profile_fixture.json
formatters_checker/: check.py
nginx/: Dockerfile  default.conf
src/apps/basket/: admin.py  apps.py  basket.py  context_processor.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/basket/migrations/: 0001_initial.py
src/apps/categories/: apps.py  models.py
src/apps/content/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/content/migrations/: 0001_initial.py
src/apps/content/templates/: base.html
src/apps/inventory/: admin.py  apps.py  forms.py  mixins.py  models.py  redis_utils.py  tests.py  urls.py  views.py
src/apps/inventory/migrations/: 0001_initial.py  0002_product_seller.py  0003_product_created_at.py  0004_category_slug_product_slug.py  0005_alter_category_slug_alter_product_slug.py  0005_category_and_product_slug_populating.py  0005_slug_populating.py  0006_alter_product_slug.py  0006_product_is_active.py  0007_product_stock.py  0008_productimage.py  0009_product_in_stock.py  0009_product_visit_count.py  0010_fill_product_in_stock.py  0011_alter_productimage_image.py
src/apps/inventory/templates/: category_detail.html  product_by_seller_list.html  product_confirm_delete.html  product_create.html  product_detail.html  product_edit.html  product_list.html
src/apps/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_alter_order_user_id_deliveryoption.py  0002_alter_order_user_id_paymentmethod_deliveryoption.py  0003_paymentmethod.py  0004_alter_deliveryoption_shipment_address.py
src/apps/user/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_user_user_type.py  0003_alter_user_user_type.py  (+6 more)
src/config/: settings.py  storage_backends.py  urls.py  wsgi.py
tests/: dummy_test.py  test_dummy.py
(+30 files in other folders)
