[tool.poetry]
name = "maindir"
version = "0.1.0"
description = ""
authors = ["GrazhdanochkaMariya <mariyashakuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"

black = "^23.7.0"
isort = "^5.11.4"
flake8 = "^6.1.0"


[tool.black]
target-version = ['py311']
include = '\.pyi?$'
line-length = 100

[tool.isort]
profile = "black"
filter_files = true
line_length = 100

psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
django-environ = "^0.11.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
