[tool.poetry]
name = "maindir"
version = "0.1.0"
description = ""
authors = ["GrazhdanochkaMariya <mariyashakuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
django-environ = "^0.11.2"
black = "^23.7.0"
ruff = "^0.0.291"
pre-commit = "^3.4.0"

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
line-length = 100

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".yml",
    ".html",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ""
]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
